# get-papers-list

./: README.md  pyproject.toml  results.csv
get_papers_list/: __main__.py  fetch.py  filter.py  output.py
